hphp/hack/test/typecheck/reified_generics/hack_arrays.php.exp
File "hack_arrays.php", line 7, characters 5-12:
Invalid reified hint (Typing[4305])
File "hack_arrays.php", line 7, characters 5-12:
This is a vec, it cannot be used as a reified type argument
File "hack_arrays.php", line 4, characters 18-18:
T is reified
File "hack_arrays.php", line 8, characters 5-15:
Invalid reified hint (Typing[4305])
File "hack_arrays.php", line 8, characters 5-15:
This is a keyset, it cannot be used as a reified type argument
File "hack_arrays.php", line 4, characters 18-18:
T is reified
File "hack_arrays.php", line 9, characters 5-18:
Invalid reified hint (Typing[4305])
File "hack_arrays.php", line 9, characters 5-18:
This is a dict, it cannot be used as a reified type argument
File "hack_arrays.php", line 4, characters 18-18:
T is reified
